--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,24 +1,27 @@
 <div>
   <d3-data [src]="dataUrl" (data)="line = $event.rows" [accessor]="parseValues" [callback]="log"></d3-data>
   <d3-data [src]="pieDataUrl" (data)="pie = $event.rows" [accessor]="parseValues" [callback]="log"></d3-data>
+  <d3-data [src]="gearDataUrl" (data)="gear = $event.rows" [accessor]="parseValues" [callback]="log"></d3-data>
 
   <section id="graphs" class="well">
     <h1>Basic Graphs</h1>
     <p>Basic line, area and bar charts can be composed together in the same chart.</p>
     <div class="d3-chart">
-      <svg d3-chart [data]="line" >
+      <svg d3-chart [data]="line">
         <g [d3-margin]="{ top: 40, right: 60, bottom: 40, left: 60}">
           <g d3-line x="date" y="optimal" yscale="total"></g>
           <g d3-area x="date" y="total"></g>
           <g d3-bars x="date" y="savings"></g>
-          <g d3-axis name="date" label="Date" [extent]="true" orientation="bottom" [ticks]="5" time-format="%Y-%m-%d"></g>
+          <g d3-axis name="date" label="Date" [extent]="true" orientation="bottom" [ticks]="5"
+             time-format="%Y-%m-%d"></g>
           <g d3-axis name="savings" label="Deposits" orientation="left" [ticks]="3"></g>
           <g d3-axis name="total" label="Savings" orientation="right"></g>
         </g>
         <text>Test</text>
         <defs>
           <linearGradient id="gradient" x1="0%" x2="100%" y1="0%" y2="100%">
-            <stop *ngFor="let s of gradient" [attr.offset]="s.offset" [attr.stop-color]="s.color" [attr.stop-opacity]="s.opacity"></stop>
+            <stop *ngFor="let s of gradient" [attr.offset]="s.offset" [attr.stop-color]="s.color"
+                  [attr.stop-opacity]="s.opacity"></stop>
           </linearGradient>
         </defs>
       </svg>
@@ -33,13 +36,13 @@
         <g [d3-margin]="{ top: 1, right: 1, bottom: 1, left: 1}">
           <g d3-area x="date" yscale="total" [columns]="columns"></g>
           <g d3-axis grid="true" name="date" [extent]="true" orientation="top"
-          scale="time" tick-dx="0.1em" tick-dy="1.1em" tick-anchor="start" tick-size="0,0"
-          [custom-time-format]="customTimeFormat" time-scale="months" time-interval="3"
+             scale="time" tick-dx="0.1em" tick-dy="1.1em" tick-anchor="start" tick-size="0,0"
+             [custom-time-format]="customTimeFormat" time-scale="months" time-interval="3"
           ></g>
           <g d3-axis grid="true" name="total" [filter]="stackDomain" orientation="right"
-          format="$,"
-          [tick-values]="[125,250,500,1000]" tick-dx="-0.5em" tick-dy="-0.3em" tick-anchor="end"
-          tick-size="0,0"
+             format="$,"
+             [tick-values]="[125,250,500,1000]" tick-dx="-0.5em" tick-dy="-0.3em" tick-anchor="end"
+             tick-size="0,0"
           ></g>
         </g>
       </svg>
@@ -56,21 +59,30 @@
       </div>
       <div class="d3-chart col-sm-6">
         <svg d3-chart [data]="pie">
-          <g d3-pie [inner-radius]="0.5" [label-radius]="0.8" label="age" value="population" [color-scale]="'category20c'"></g>
+          <g d3-pie inner-radius="0.5" label-radius="0.8" label="age" value="population" color-scale="category20c"></g>
         </svg>
       </div>
+    </div>
+  </section>
+
+  <section id="gear-chart" class="well">
+    <h1>Gear Chart</h1>
+    <div class="d3-chart">
+      <svg d3-chart [data]="gear">
+        <g d3-gear corner-radius-percentage="4" angle-padding="0.01" outer-radius-field="outerR" inner-radius-field="innerR" inner-label-radius-field="innerLR" inner-radius-field="innerR" inner-label-field="innerL" outer-label-field="outerL" weight-field="weight" color-scale="category20c"></g>
+      </svg>
     </div>
   </section>
 
   <section id="arc-charts" class="well">
     <h1>Arc Charts</h1>
     <div class="row">
-      <div class="d3-chart col-sm-6 simple-arc1" >
+      <div class="d3-chart col-sm-6 simple-arc1">
         <svg d3-chart [data]="arcs.arc1">
-          <g d3-arc transition="bounce" [duration]="1000"></g>
+          <g d3-arc transition="bounce" duration="1000"></g>
         </svg>
       </div>
-      <div class="d3-chart col-sm-6 simple-arc2" >
+      <div class="d3-chart col-sm-6 simple-arc2">
         <svg d3-chart [data]="arcs.arc2">
           <g d3-arc [inner-radius]="0.9"></g>
         </svg>
