--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,16 +12,14 @@
           <g d3-line x="date" y="optimal" yscale="total"></g>
           <g d3-area x="date" y="total"></g>
           <g d3-bars x="date" y="savings"></g>
-          <g d3-axis name="date" label="Date" [extent]="true" orientation="bottom" [ticks]="5"
-             time-format="%Y-%m-%d"></g>
+          <g d3-axis name="date" label="Date" [extent]="true" orientation="bottom" [ticks]="5" time-format="%Y-%m-%d"></g>
           <g d3-axis name="savings" label="Deposits" orientation="left" [ticks]="3"></g>
           <g d3-axis name="total" label="Savings" orientation="right"></g>
         </g>
         <text>Test</text>
         <defs>
           <linearGradient id="gradient" x1="0%" x2="100%" y1="0%" y2="100%">
-            <stop *ngFor="let s of gradient" [attr.offset]="s.offset" [attr.stop-color]="s.color"
-                  [attr.stop-opacity]="s.opacity"></stop>
+            <stop *ngFor="let s of gradient" [attr.offset]="s.offset" [attr.stop-color]="s.color" [attr.stop-opacity]="s.opacity"></stop>
           </linearGradient>
         </defs>
       </svg>
@@ -35,15 +33,10 @@
       <svg d3-chart [data]="line">
         <g [d3-margin]="{ top: 1, right: 1, bottom: 1, left: 1}">
           <g d3-area x="date" yscale="total" [columns]="columns"></g>
-          <g d3-axis grid="true" name="date" [extent]="true" orientation="top"
-             scale="time" tick-dx="0.1em" tick-dy="1.1em" tick-anchor="start" tick-size="0,0"
-             [custom-time-format]="customTimeFormat" time-scale="months" time-interval="3"
-          ></g>
-          <g d3-axis grid="true" name="total" [filter]="stackDomain" orientation="right"
-             format="$,"
-             [tick-values]="[125,250,500,1000]" tick-dx="-0.5em" tick-dy="-0.3em" tick-anchor="end"
-             tick-size="0,0"
-          ></g>
+          <g d3-axis grid="true" name="date" [extent]="true" orientation="top" scale="time" tick-dx="0.1em" tick-dy="1.1em" tick-anchor="start"
+            tick-size="0,0" [custom-time-format]="customTimeFormat" time-scale="months" time-interval="3"></g>
+          <g d3-axis grid="true" name="total" [filter]="stackDomain" orientation="right" format="$," [tick-values]="[125,250,500,1000]"
+            tick-dx="-0.5em" tick-dy="-0.3em" tick-anchor="end" tick-size="0,0"></g>
         </g>
       </svg>
     </div>
@@ -70,23 +63,23 @@
     <div class="d3-chart">
       <svg d3-chart [data]="gear">
         <g d3-gear dx="-50" radius-scaling="0.7" rotation="45" corner-radius-percentage="4" angle-padding="0.01" outer-radius-field="outerR"
-           inner-radius-field="innerR" inner-label-radius-field="innerLR" inner-radius-field="innerR"
-           inner-label-field="innerL" outer-label-field="outerL" weight-field="weight" color-scale="category20c"></g>
+          inner-radius-field="innerR" inner-label-radius-field="innerLR" inner-radius-field="innerR" inner-label-field="innerL"
+          outer-label-field="outerL" weight-field="weight" color-scale="category20c"></g>
       </svg>
     </div>
     <div class="row">
       <div class="d3-chart col-sm-6">
         <svg d3-chart [data]="gear">
           <g d3-gear dy="20" radius-scaling="0.66" format="half-right" corner-radius-percentage="4" angle-padding="0.01" outer-radius-field="outerR"
-             inner-radius-field="innerR" inner-label-radius-field="innerLR" inner-radius-field="innerR"
-             inner-label-field="innerL" outer-label-field="outerL" weight-field="weight" color-scale="category20c"></g>
+            inner-radius-field="innerR" inner-label-radius-field="innerLR" inner-radius-field="innerR" inner-label-field="innerL"
+            outer-label-field="outerL" weight-field="weight" color-scale="category20c"></g>
         </svg>
       </div>
       <div class="d3-chart col-sm-6">
         <svg d3-chart [data]="gear">
           <g d3-gear dy="-20" radius-scaling="0.66" format="half-left" corner-radius-percentage="4" angle-padding="0.01" outer-radius-field="outerR"
-             inner-radius-field="innerR" inner-label-radius-field="innerLR" inner-radius-field="innerR"
-             inner-label-field="innerL" outer-label-field="outerL" weight-field="weight" color-scale="category20c"></g>
+            inner-radius-field="innerR" inner-label-radius-field="innerLR" inner-radius-field="innerR" inner-label-field="innerL"
+            outer-label-field="outerL" weight-field="weight" color-scale="category20c"></g>
         </svg>
       </div>
     </div>
