--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,7 +12,7 @@
           <g d3-area x="date" y="total"></g>
           <g d3-axis name="date" label="Date" [extent]="true" orientation="bottom" [ticks]="5" time-format="%Y-%m-%d"></g>
           <g d3-axis name="total" label="Savings" orientation="left" grid="true" tick-anchor="end" order="1"></g>
-          <g d3-axis-label axis="total" value="600" label="six hundred" position="end"></g>
+          <g d3-axis-label axis="total" value="600" label="six hundred" position="end" x-padding="-5" y-padding="-5"></g>
         </g>
       </svg>
     </div>
